--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "react-svg-patterns",
-  "version": "0.6.0",
+  "version": "0.7.0",
   "description": "Create, manage, and use SVG patterns in your React components",
   "author": "kmck",
   "license": "ISC",
   "repository": "kmck/react-svg-patterns",
-  "main": "dist/index.js",
-  "module": "dist/index.es.js",
-  "jsnext:main": "dist/index.es.js",
-  "types": "dist/index.d.ts",
+  "main": "lib/index.js",
+  "module": "es/index.js",
+  "jsnext:main": "es/index.js",
+  "types": "es/index.d.ts",
   "engines": {
     "node": ">=8",
     "npm": ">=5"
@@ -16,10 +16,16 @@
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
-    "build": "rollup -c",
-    "start": "rollup -c -w",
-    "prepublishOnly": "yarn run build",
-    "predeploy": "cd example && yarn install && yarn run build",
+    "build:cjs": "tsc -p tsconfig.build.json --outDir lib -m commonjs",
+    "build:es": "tsc -p tsconfig.build.json --outDir es -m es6",
+    "build:version": "node -e \"console.log('export default \\'' + require('./package.json').version +'\\';')\" > src/version.ts",
+    "build": "yarn build:version && yarn build:es && yarn build:cjs",
+    "clean": "rm -rf es && rm -rf lib",
+    "start:cjs": "tsc -p tsconfig.build.json -w --outDir lib -m commonjs",
+    "start:es": "tsc -p tsconfig.build.json -w --outDir es -m es6",
+    "start": "concurrently \"npm run start:es\" \"npm run start:cjs\"",
+    "prepublishOnly": "yarn clean && yarn build",
+    "predeploy": "cd example && yarn install && yarn build",
     "deploy": "gh-pages -d example/build"
   },
   "dependencies": {
@@ -38,26 +44,21 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@babel/preset-typescript": "^7.12.7",
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^11.1.0",
     "@types/jest": "^26.0.20",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-test-renderer": "^17.0.0",
     "babel-jest": "^26.6.3",
+    "concurrently": "^5.3.0",
     "gh-pages": "^3.1.0",
     "jest": "^26.6.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-test-renderer": "^17.0.1",
-    "rollup": "^2.38.0",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-postcss": "^4.0.0",
-    "rollup-plugin-typescript2": "^0.29.0",
     "typescript": "^4.1.3"
   },
   "files": [
-    "dist"
+    "es",
+    "lib"
   ]
 }
