--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,44 +1,27 @@
 {
+  "include": ["src"],
   "compilerOptions": {
-    "outDir": "build",
-    "module": "esnext",
-    "target": "es5",
-    "lib": [
-      "es6",
-      "dom",
-      "es2016",
-      "es2017"
-    ],
-    "sourceMap": true,
-    "allowJs": false,
-    "jsx": "react",
-    "allowSyntheticDefaultImports": true,
-    "declaration": true,
-    "moduleResolution": "node",
-    "downlevelIteration": true,
-    "forceConsistentCasingInFileNames": true,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "suppressImplicitAnyIndexErrors": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "skipLibCheck": true,
+    "alwaysStrict": true, // Emit "use Strict" for each source file
     "esModuleInterop": true,
-    "strict": true,
-    "resolveJsonModule": true,
-    // "isolatedModules": true,
-    "noEmit": true
-  },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "node_modules",
-    "build",
-    "dist",
-    "example",
-    "rollup.config.js"
-  ]
+    "experimentalDecorators": true, // Enable ES7 decorators
+    "inlineSourceMap": true, // Generate a source map during compilation
+    "inlineSources": true, // Emit source alongside the source map
+    "jsx": "react",
+    "lib": ["esnext", "dom"], // Include latest ES library during compilation
+    "module": "commonjs", // Enforce Node.js standard module code generation
+    "moduleResolution": "node", // Enforce Node.js standard module resolution strategy
+    "noEmit": true, // Base config does not emit compiled files, used for IDE linting
+    "noImplicitAny": true, // Prohibit expressions with implied any type
+    "noImplicitReturns": false, // Do not enforce function return statements for all code paths
+    "noImplicitThis": true, // Prohibit 'this' expressions with implied any type
+    "noUnusedLocals": true, // Prohibit unused variables declarations.
+    "noUnusedParameters": true, // Prohibit unused function parameters.
+    "preserveConstEnums": true, // Retain const enum declarations
+    "pretty": true, // Stylize errors and messages
+    "removeComments": true, // Do not emit comments during compilation
+    "resolveJsonModule": true, // Allow import of JSON files
+    "strictFunctionTypes": true, // Prohibit bivariant function parameter checking
+    "strictNullChecks": false, // Null/Undefined are in the domain of every type
+    "target": "es6" // Target ES2015 during compilation
+  }
 }
